--- a/api/src/main/resources/reports/report.jrxml
+++ b/api/src/main/resources/reports/report.jrxml
@@ -143,8 +143,8 @@
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="component" uuid="d331ff3c-b68a-44cc-b8f3-de8f51815dea" stretchType="ContainerHeight" x="30" y="148" width="500" height="82" printWhenDetailOverflows="true">
-				<component kind="table" horizontalPosition="Left">
+			<element kind="component" uuid="d331ff3c-b68a-44cc-b8f3-de8f51815dea" x="30" y="148" width="500" height="82" printWhenDetailOverflows="true">
+				<component kind="table">
 					<datasetRun uuid="50329faf-0ab4-4cd4-a30b-7a9d909cae82" subDataset="caracteristicas">
 						<dataSourceExpression><![CDATA[$P{caracteristicas}]]></dataSourceExpression>
 					</datasetRun>
@@ -186,7 +186,7 @@
 			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" x="0" y="230" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Responsabilidades del Receptor]]></text>
 			</element>
-			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" x="0" y="260" width="555" height="242" markup="none" hTextAlign="Justified">
+			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" x="0" y="260" width="555" height="230" markup="none" hTextAlign="Justified">
 				<paragraph lineSpacing="Single" lineSpacingSize="1.0"/>
 				<text><![CDATA[El receptor acepta la responsabilidad de mantener las laptops en buen estado y utilizarlas de manera adecuada para el propósito acordado. Cualquier daño o pérdida de las laptops debido a negligencia o mal uso por parte del receptor será de su responsabilidad y deberá informarse a INTEGRITY SOLUTIONS de inmediato.
 Las laptops se proporcionan para el uso exclusivo relacionado con fines laborales, Al finalizar el período acordado de uso, las laptops deben ser devueltas en las mismas condiciones en las que fueron entregadas, salvo el desgaste normal.
@@ -198,22 +198,23 @@ En caso de que el equipo proporcionado por INTEGRITY SOLUTIONS sufra robo, daño
 			</element>
 		</band>
 	</detail>
-	<columnFooter height="81" splitType="Stretch">
-		<element kind="staticText" uuid="3c1c6770-94c6-4e34-b0a1-9b4045b5ffce" x="0" y="19" width="120" height="21" bold="true" hTextAlign="Left">
-			<text><![CDATA[FECHA DE ENTREGA]]></text>
-		</element>
-		<element kind="textField" uuid="f39892e0-d001-4b04-9095-b6d903a65655" x="0" y="40" width="180" height="21" hTextAlign="Left">
-			<expression><![CDATA[$P{date}]]></expression>
-		</element>
-		<element kind="staticText" uuid="b1393ec3-7058-4b5b-b1f3-f5d434dc880b" x="321" y="30" width="231" height="21" bold="true" hTextAlign="Center">
-			<text><![CDATA[RECIBIDO]]></text>
-		</element>
-		<element kind="line" uuid="2285fa0a-d990-4091-bc42-250514b24204" x="321" y="30" width="231" height="1"/>
-		<element kind="textField" uuid="98132432-579f-4634-a44a-e12f6680b134" x="320" y="50" width="230" height="30" bold="true" hTextAlign="Center" vTextAlign="Top">
-			<expression><![CDATA[$P{employeeName}]]></expression>
-		</element>
+	<columnFooter height="38" splitType="Stretch">
 		<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 	</columnFooter>
-	<pageFooter height="54" splitType="Stretch"/>
+	<pageFooter height="67" splitType="Stretch">
+		<element kind="staticText" uuid="3c1c6770-94c6-4e34-b0a1-9b4045b5ffce" x="0" y="9" width="120" height="21" bold="true" hTextAlign="Left">
+			<text><![CDATA[FECHA DE ENTREGA]]></text>
+		</element>
+		<element kind="textField" uuid="f39892e0-d001-4b04-9095-b6d903a65655" x="0" y="30" width="180" height="21" hTextAlign="Left">
+			<expression><![CDATA[$P{date}]]></expression>
+		</element>
+		<element kind="staticText" uuid="b1393ec3-7058-4b5b-b1f3-f5d434dc880b" x="315" y="9" width="231" height="21" bold="true" hTextAlign="Center">
+			<text><![CDATA[RECIBIDO]]></text>
+		</element>
+		<element kind="line" uuid="2285fa0a-d990-4091-bc42-250514b24204" x="315" y="9" width="231" height="1"/>
+		<element kind="textField" uuid="98132432-579f-4634-a44a-e12f6680b134" x="314" y="29" width="230" height="30" bold="true" hTextAlign="Center" vTextAlign="Top">
+			<expression><![CDATA[$P{employeeName}]]></expression>
+		</element>
+	</pageFooter>
 	<summary height="42" splitType="Stretch"/>
 </jasperReport>
