--- a/api/src/main/resources/reports/report.jrxml
+++ b/api/src/main/resources/reports/report.jrxml
@@ -49,21 +49,15 @@
 		<element kind="staticText" uuid="706ccfe2-93af-48ed-9105-50afc49893ab" x="-20" y="0" width="595" height="79" fontSize="14.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[ACTA DE ENTREGA RECEPCIÓN]]></text>
 		</element>
-		<element kind="textField" uuid="b905a14d-2fd5-42b2-afec-e5e1973ed10d" stretchType="ContainerHeight" x="2" y="80" width="550" height="30" printWhenDetailOverflows="true" hTextAlign="Justified">
-			<expression><![CDATA["Por medio de la presente la compañía INTEGRITY SOLUTIONS procede a realizar la entrega de un computador portátil al Sr./Srta "
-        + $P{employeeName}
-        + " con "
-        + $P{employeeIdType}
-        + " "
-        + $P{employeeId}
-        + ", el mismo que a continuación se detalla:"]]></expression>
+		<element kind="textField" uuid="b905a14d-2fd5-42b2-afec-e5e1973ed10d" stretchType="NoStretch" x="2" y="80" width="550" height="30" hTextAlign="Justified">
+			<expression><![CDATA["Por medio de la presente la compañía INTEGRITY SOLUTIONS procede a realizar la entrega de un computador portátil al Sr./Srta " + $P{employeeName} + " con " + $P{employeeIdType} + " " + $P{employeeId} + ", el mismo que a continuación se detalla:"]]></expression>
 		</element>
 		<element kind="image" uuid="e1b20e27-0ed1-4ee9-9fb6-1084a35fe8b4" x="2" y="9" width="60" height="60" onErrorType="Blank">
 			<expression><![CDATA[$P{logo}]]></expression>
 		</element>
 	</title>
 	<detail>
-		<band height="503" splitType="Prevent">
+		<band height="503" splitType="Stretch">
 			<element kind="staticText" uuid="9fb8c1dd-ad8b-4f4c-a7ce-4e1233fe5a21" mode="Opaque" x="30" y="0" width="250" height="30" backcolor="#FDE8D8" bold="true" vTextAlign="Middle">
 				<text><![CDATA[ASIGNADO A:]]></text>
 				<box padding="5">
@@ -184,9 +178,9 @@
 				<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 			</element>
 			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" stretchType="ContainerHeight" x="0" y="230" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
-				<text><![CDATA[Responsabilidades del Receptor]]></text>
+				<text><![CDATA[Responsabilidades del receptor]]></text>
 			</element>
-			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="ContainerHeight" x="0" y="260" width="555" height="230" markup="none" printRepeatedValues="false" printWhenDetailOverflows="true" hTextAlign="Justified">
+			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="NoStretch" x="0" y="260" width="555" height="230" markup="none" printRepeatedValues="false" hTextAlign="Justified">
 				<paragraph lineSpacing="Single" lineSpacingSize="1.0"/>
 				<text><![CDATA[El receptor acepta la responsabilidad de mantener las laptops en buen estado y utilizarlas de manera adecuada para el propósito acordado. Cualquier daño o pérdida de las laptops debido a negligencia o mal uso por parte del receptor será de su responsabilidad y deberá informarse a INTEGRITY SOLUTIONS de inmediato.
 Las laptops se proporcionan para el uso exclusivo relacionado con fines laborales, Al finalizar el período acordado de uso, las laptops deben ser devueltas en las mismas condiciones en las que fueron entregadas, salvo el desgaste normal.
