--- a/api/src/main/resources/reports/report.jrxml
+++ b/api/src/main/resources/reports/report.jrxml
@@ -45,11 +45,11 @@
 	<parameter name="logo" class="java.io.InputStream"/>
 	<query language="sql"><![CDATA[]]></query>
 	<background splitType="Stretch"/>
-	<title height="110" splitType="Stretch">
+	<title height="120" splitType="Stretch">
 		<element kind="staticText" uuid="706ccfe2-93af-48ed-9105-50afc49893ab" x="-20" y="0" width="595" height="79" fontSize="14.0" bold="true" hTextAlign="Center" vTextAlign="Middle">
 			<text><![CDATA[ACTA DE ENTREGA RECEPCIÓN]]></text>
 		</element>
-		<element kind="textField" uuid="b905a14d-2fd5-42b2-afec-e5e1973ed10d" stretchType="NoStretch" x="2" y="80" width="550" height="30" hTextAlign="Justified">
+		<element kind="textField" uuid="b905a14d-2fd5-42b2-afec-e5e1973ed10d" stretchType="NoStretch" x="2" y="80" width="550" height="40" textAdjust="StretchHeight" printWhenDetailOverflows="true" hTextAlign="Justified">
 			<expression><![CDATA["Por medio de la presente la compañía INTEGRITY SOLUTIONS procede a realizar la entrega de un computador portátil al Sr./Srta " + $P{employeeName} + " con " + $P{employeeIdType} + " " + $P{employeeId} + ", el mismo que a continuación se detalla:"]]></expression>
 		</element>
 		<element kind="image" uuid="e1b20e27-0ed1-4ee9-9fb6-1084a35fe8b4" x="2" y="9" width="60" height="60" onErrorType="Blank">
@@ -58,7 +58,7 @@
 	</title>
 	<detail>
 		<band height="503" splitType="Stretch">
-			<element kind="staticText" uuid="9fb8c1dd-ad8b-4f4c-a7ce-4e1233fe5a21" mode="Opaque" x="30" y="0" width="250" height="30" backcolor="#FDE8D8" bold="true" vTextAlign="Middle">
+			<element kind="staticText" uuid="9fb8c1dd-ad8b-4f4c-a7ce-4e1233fe5a21" mode="Opaque" x="30" y="10" width="250" height="30" backcolor="#FDE8D8" bold="true" vTextAlign="Middle">
 				<text><![CDATA[ASIGNADO A:]]></text>
 				<box padding="5">
 					<pen lineWidth="1.0" lineStyle="Solid"/>
@@ -68,13 +68,13 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="2f59065e-c19d-4dac-b0e8-d3052a516452" mode="Opaque" x="30" y="30" width="500" height="19" backcolor="#FDE8D8" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="staticText" uuid="2f59065e-c19d-4dac-b0e8-d3052a516452" mode="Opaque" x="30" y="40" width="500" height="19" backcolor="#FDE8D8" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[DETALLES GENERALES]]></text>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0" lineStyle="Solid"/>
 				</box>
 			</element>
-			<element kind="textField" uuid="0e198a7e-2a40-4c86-a43f-d56326c41b38" x="280" y="0" width="250" height="30" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="0e198a7e-2a40-4c86-a43f-d56326c41b38" x="280" y="10" width="250" height="30" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{employeeName}]]></expression>
 				<box>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -83,61 +83,61 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="7689477d-7726-4a6a-ab60-0cf163353662" mode="Opaque" x="30" y="49" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="staticText" uuid="7689477d-7726-4a6a-ab60-0cf163353662" mode="Opaque" x="30" y="59" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
 				<text><![CDATA[CÓDIGO:]]></text>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0" lineStyle="Solid"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="b77e537f-7f46-40e2-a03f-ed7192831422" mode="Opaque" x="30" y="69" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="staticText" uuid="b77e537f-7f46-40e2-a03f-ed7192831422" mode="Opaque" x="30" y="79" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
 				<text><![CDATA[SERVICE TAG: S/N]]></text>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="35bb9d1a-ba4e-43f2-a16d-f89045c8cee7" mode="Opaque" x="30" y="109" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="staticText" uuid="35bb9d1a-ba4e-43f2-a16d-f89045c8cee7" mode="Opaque" x="30" y="119" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
 				<text><![CDATA[MODELO:]]></text>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="28852865-2453-4883-8041-ff9c10c2497b" mode="Opaque" x="30" y="89" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
+			<element kind="staticText" uuid="28852865-2453-4883-8041-ff9c10c2497b" mode="Opaque" x="30" y="99" width="250" height="20" backcolor="#FDE8D8" bold="true" hTextAlign="Left" vTextAlign="Middle">
 				<text><![CDATA[MARCA:]]></text>
 				<box topPadding="0" leftPadding="5" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="staticText" uuid="55283cd8-85c3-4873-adb6-373b0a239be4" mode="Opaque" x="30" y="129" width="500" height="19" backcolor="#FDE8D8" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="staticText" uuid="55283cd8-85c3-4873-adb6-373b0a239be4" mode="Opaque" x="30" y="139" width="500" height="19" backcolor="#FDE8D8" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[DETALLES TÉCNICOS]]></text>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="textField" uuid="f06a1428-b544-4e75-98d0-02f5e2693efc" x="280" y="49" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="f06a1428-b544-4e75-98d0-02f5e2693efc" x="280" y="59" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{itemCode}]]></expression>
 				<box>
 					<pen lineWidth="1.0" lineStyle="Solid"/>
 				</box>
 			</element>
-			<element kind="textField" uuid="c44942e9-4a2b-4d80-a257-932a38ccaba6" x="280" y="69" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="c44942e9-4a2b-4d80-a257-932a38ccaba6" x="280" y="79" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{serialNumber}]]></expression>
 				<box>
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="textField" uuid="a0a838ab-df77-452b-bf69-f31cc87c8478" x="280" y="89" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="a0a838ab-df77-452b-bf69-f31cc87c8478" x="280" y="99" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{brand}]]></expression>
 				<box>
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="textField" uuid="5df6b210-8b0b-4864-826a-1d0aeb9322d6" x="280" y="109" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="textField" uuid="5df6b210-8b0b-4864-826a-1d0aeb9322d6" x="280" y="119" width="250" height="20" hTextAlign="Center" vTextAlign="Middle">
 				<expression><![CDATA[$P{model}]]></expression>
 				<box>
 					<pen lineWidth="1.0"/>
 				</box>
 			</element>
-			<element kind="component" uuid="d331ff3c-b68a-44cc-b8f3-de8f51815dea" x="30" y="148" width="500" height="82" style="Table_TD">
+			<element kind="component" uuid="d331ff3c-b68a-44cc-b8f3-de8f51815dea" x="30" y="158" width="500" height="72" style="Table_TD">
 				<component kind="table">
 					<datasetRun uuid="50329faf-0ab4-4cd4-a30b-7a9d909cae82" subDataset="caracteristicas">
 						<dataSourceExpression><![CDATA[$P{caracteristicas}]]></dataSourceExpression>
@@ -177,10 +177,10 @@
 				<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
 				<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 			</element>
-			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" stretchType="ContainerHeight" x="0" y="230" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
+			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" stretchType="ContainerHeight" x="0" y="220" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
 				<text><![CDATA[Responsabilidades del receptor]]></text>
 			</element>
-			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="NoStretch" x="0" y="260" width="555" height="230" markup="none" printRepeatedValues="false" hTextAlign="Justified">
+			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="ContainerHeight" x="0" y="250" width="555" height="240" markup="none" printRepeatedValues="false" hTextAlign="Justified">
 				<paragraph lineSpacing="Single" lineSpacingSize="1.0"/>
 				<text><![CDATA[El receptor acepta la responsabilidad de mantener las laptops en buen estado y utilizarlas de manera adecuada para el propósito acordado. Cualquier daño o pérdida de las laptops debido a negligencia o mal uso por parte del receptor será de su responsabilidad y deberá informarse a INTEGRITY SOLUTIONS de inmediato.
 Las laptops se proporcionan para el uso exclusivo relacionado con fines laborales, Al finalizar el período acordado de uso, las laptops deben ser devueltas en las mismas condiciones en las que fueron entregadas, salvo el desgaste normal.
@@ -192,9 +192,6 @@ En caso de que el equipo proporcionado por INTEGRITY SOLUTIONS sufra robo, daño
 			</element>
 		</band>
 	</detail>
-	<columnFooter height="38" splitType="Stretch">
-		<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
-	</columnFooter>
 	<pageFooter height="67" splitType="Stretch">
 		<element kind="staticText" uuid="3c1c6770-94c6-4e34-b0a1-9b4045b5ffce" x="0" y="9" width="120" height="21" bold="true" hTextAlign="Left">
 			<text><![CDATA[FECHA DE ENTREGA]]></text>
