--- a/api/src/main/resources/reports/report.jrxml
+++ b/api/src/main/resources/reports/report.jrxml
@@ -57,7 +57,7 @@
 		</element>
 	</title>
 	<detail>
-		<band height="510" splitType="Stretch">
+		<band height="500" splitType="Stretch">
 			<element kind="staticText" uuid="9fb8c1dd-ad8b-4f4c-a7ce-4e1233fe5a21" mode="Opaque" x="30" y="1" width="250" height="30" backcolor="#FDE8D8" bold="true" vTextAlign="Middle">
 				<text><![CDATA[ASIGNADO A:]]></text>
 				<box padding="5">
@@ -177,10 +177,10 @@
 				<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
 				<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 			</element>
-			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" stretchType="ContainerHeight" x="0" y="220" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
-				<text><![CDATA[Responsabilidades del receptor]]></text>
+			<element kind="staticText" uuid="b4e7dbcb-e04d-4b60-ad61-affbf41f8105" positionType="Float" stretchType="ContainerHeight" x="0" y="230" width="555" height="36" bold="true" hTextAlign="Center" vTextAlign="Middle">
+				<text><![CDATA[Responsabilidades del Receptor]]></text>
 			</element>
-			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="NoStretch" x="0" y="256" width="555" height="240" markup="none" printRepeatedValues="false" hTextAlign="Justified" vTextAlign="Middle">
+			<element kind="staticText" uuid="c3bf06b3-0620-4689-a98e-79370842482c" positionType="Float" stretchType="NoStretch" x="0" y="260" width="555" height="240" markup="none" printRepeatedValues="false" hTextAlign="Justified" vTextAlign="Middle">
 				<paragraph lineSpacing="Single" lineSpacingSize="1.0"/>
 				<text><![CDATA[El receptor acepta la responsabilidad de mantener las laptops en buen estado y utilizarlas de manera adecuada para el propósito acordado. Cualquier daño o pérdida de las laptops debido a negligencia o mal uso por parte del receptor será de su responsabilidad y deberá informarse a INTEGRITY SOLUTIONS de inmediato.
 Las laptops se proporcionan para el uso exclusivo relacionado con fines laborales, Al finalizar el período acordado de uso, las laptops deben ser devueltas en las mismas condiciones en las que fueron entregadas, salvo el desgaste normal.
